--- a/public/index.html
+++ b/public/index.html
@@ -740,7 +740,7 @@
         function mostrarEstadisticas(stats) {
             const container = document.getElementById('estadisticasContainer');
             
-            if (!stats.total_ventas || stats.total_ventas === '0') {
+            if (!stats.total_transacciones || stats.total_transacciones === '0') {
                 container.innerHTML = '<div class="no-data">No hay ventas para mostrar estadísticas</div>';
                 return;
             }
@@ -749,16 +749,16 @@
                 <h3>Estadísticas del Día</h3>
                 <div class="stats-grid">
                     <div class="stat-card">
-                        <div class="stat-value">${stats.total_ventas || 0}</div>
-                        <div class="stat-label">Total Ventas</div>
+                        <div class="stat-value">${stats.total_transacciones || 0}</div>
+                        <div class="stat-label">Total Transacciones</div>
                     </div>
                     <div class="stat-card">
                         <div class="stat-value">$${formatearPrecio(stats.ingresos_totales || 0)}</div>
                         <div class="stat-label">Ingresos Totales</div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-value">${stats.total_unidades || 0}</div>
-                        <div class="stat-label">Unidades Vendidas</div>
+                        <div class="stat-value">${stats.cantidad_total_vendida || 0}</div>
+                        <div class="stat-label">Cantidad Vendida</div>
                     </div>
                     <div class="stat-card">
                         <div class="stat-value">$${formatearPrecio(stats.venta_promedio || 0)}</div>
@@ -772,6 +772,11 @@
                         <div class="stat-value">$${formatearPrecio(stats.venta_maxima || 0)}</div>
                         <div class="stat-label">Venta Máxima</div>
                     </div>
+                </div>
+                <div style="margin-top: 20px; text-align: center;">
+                    <a href="/reportes-avanzados" class="btn btn-primary" style="text-decoration: none;">
+                        📊 Ver Analytics Avanzados
+                    </a>
                 </div>
             `;
             
