cafeteria nuevo diseño y cuentas1

--- a/public/reportes-avanzados.html
+++ b/public/reportes-avanzados.html
@@ -928,7 +928,7 @@
                             beginAtZero: true,
                             ticks: {
                                 callback: function(value) {
-                                    return ' + formatearPrecio(value);
+                                    return '$' + formatearPrecio(value);
                                 },
                                 color: '#6D4C41'
                             },
